CLI options tests

--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,16 @@
                         </goals>
                     </execution>
                     <execution>
+                        <id>test-options</id>
+                        <configuration>
+                            <executable>./src/test/script/test-options.sh</executable>
+                        </configuration>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <id>basic-synt</id>
                         <configuration>
                             <executable>./src/test/script/basic-synt.sh</executable>
